add: register device api
