# device-status/openapi.yml
@@ -40,7 +40,7 @@ paths:
       tags:
         - DeviceStatusController
       summary: for M5Stack
-      description: Register device latest status
+      description: Update device latest status
       parameters:
         - in: path
           name: deviceId
@@ -53,7 +53,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/RegisterDeviceStatusRequest'
+              $ref: '#/components/schemas/UpdateDeviceStatusRequest'
       responses:
         '201':
           description: successful operation
@@ -77,6 +77,21 @@ paths:
           description: successful operation
           content:
             application/json:
+              schema:
+                $ref: '#/components/schemas/GetDeviceStatusResponse'
+  /admin/device/register:
+    post:
+      tags:
+        - AdminDeviceController
+      summary: for Admin portal
+      description: Register device
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegisterDeviceResponse'
 components:
   schemas:
     GetDeviceStatusResponse:
@@ -102,7 +117,7 @@ components:
         - NORMAL
         - WET
         - DRY
-    RegisterDeviceStatusRequest:
+    UpdateDeviceStatusRequest:
       type: object
       required:
         - temperature
@@ -114,3 +129,9 @@ components:
         humidity:
           type: integer
           example: 70
+    RegisterDeviceResponse:
+      type: object
+      properties:
+        deviceId:
+          type: integer
+          example: 1
